--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>git remote</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium pariatur dolorem sit?</p>
+    <script src="main.js"></script>
   </body>
 </html>
